--- a/surfit/vc8/freeflow.vcproj
+++ b/surfit/vc8/freeflow.vcproj
@@ -412,8 +412,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release_SSE2|Win32"
-			OutputDirectory="$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="..\$(ConfigurationName)"
+			IntermediateDirectory="..\$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
@@ -456,11 +456,12 @@
 				EnableFunctionLevelLinking="true"
 				EnableEnhancedInstructionSet="2"
 				RuntimeTypeInfo="true"
-				PrecompiledHeaderFile=".\../Release/freeflow.pch"
-				AssemblerListingLocation=".\../Release/"
-				ObjectFile=".\../Release/"
-				ProgramDataBaseFileName=".\../Release/"
+				PrecompiledHeaderFile=".\../Release_SSE2/freeflow.pch"
+				AssemblerListingLocation=".\../Release_SSE2/"
+				ObjectFile=".\../Release_SSE2/"
+				ProgramDataBaseFileName=".\../Release_SSE2/"
 				BrowseInformation="1"
+				BrowseInformationFile=".\../Release_SSE2/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -514,7 +515,13 @@
 		</Configuration>
 		<Configuration
 			Name="Release_SSE|Win32"
-			ConfigurationType="1"
+			OutputDirectory="..\$(ConfigurationName)"
+			IntermediateDirectory="..\$(ConfigurationName)"
+			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -530,6 +537,12 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\../Release/freeflow.tlb"
+				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -537,21 +550,46 @@
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				EnableFiberSafeOptimizations="true"
+				OmitFramePointers="true"
 				WholeProgramOptimization="true"
+				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,C:\Tcl\include\"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
+				StringPooling="true"
+				RuntimeLibrary="0"
+				EnableFunctionLevelLinking="true"
 				EnableEnhancedInstructionSet="1"
+				RuntimeTypeInfo="true"
+				PrecompiledHeaderFile=".\../Release_SSE/freeflow.pch"
+				AssemblerListingLocation=".\../Release_SSE/"
+				ObjectFile=".\../Release_SSE/"
+				ProgramDataBaseFileName=".\../Release_SSE/"
+				BrowseInformation="1"
+				BrowseInformationFile=".\../Release_SSE/"
+				WarningLevel="3"
+				SuppressStartupBanner="true"
+				CompileAs="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
+				Culture="1049"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="tcl83.lib"
+				OutputFile="../bin/libfreeflow.dll"
+				LinkIncremental="1"
+				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="C:\Tcl\lib"
+				ProgramDatabaseFile=".\../Release/libfreeflow.pdb"
+				ImportLibrary="../bin/libfreeflow.lib"
+				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -641,6 +679,16 @@
 						BrowseInformation="1"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_SSE|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="2"
+						AdditionalIncludeDirectories=""
+						BrowseInformation="1"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\src\freeflow\flow_variables.cpp"
@@ -697,6 +745,16 @@
 						BrowseInformation="1"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_SSE|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="2"
+						AdditionalIncludeDirectories=""
+						BrowseInformation="1"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\src\freeflow\freeflow_wrap.cxx"
@@ -706,7 +764,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						Optimization="4"
+						Optimization="3"
 						AdditionalIncludeDirectories=""
 						BrowseInformation="1"
 					/>
@@ -748,7 +806,17 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						Optimization="4"
+						Optimization="3"
+						AdditionalIncludeDirectories=""
+						BrowseInformation="1"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_SSE|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="3"
 						AdditionalIncludeDirectories=""
 						BrowseInformation="1"
 					/>
@@ -815,6 +883,16 @@
 								BrowseInformation="1"
 							/>
 						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\src\freeflow\flow_surf_tcl.cpp"
@@ -863,6 +941,16 @@
 						</FileConfiguration>
 						<FileConfiguration
 							Name="Release_SSE2|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
 							>
 							<Tool
 								Name="VCCLCompilerTool"
@@ -935,6 +1023,16 @@
 								BrowseInformation="1"
 							/>
 						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\src\freeflow\flow_points_tcl.cpp"
@@ -983,6 +1081,16 @@
 						</FileConfiguration>
 						<FileConfiguration
 							Name="Release_SSE2|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
 							>
 							<Tool
 								Name="VCCLCompilerTool"
@@ -1051,6 +1159,16 @@
 								BrowseInformation="1"
 							/>
 						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\src\freeflow\flow_cntr.cpp"
@@ -1099,6 +1217,16 @@
 						</FileConfiguration>
 						<FileConfiguration
 							Name="Release_SSE2|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
 							>
 							<Tool
 								Name="VCCLCompilerTool"
@@ -1163,6 +1291,16 @@
 								BrowseInformation="1"
 							/>
 						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\src\freeflow\flow_curvs_tcl.cpp"
@@ -1211,6 +1349,16 @@
 						</FileConfiguration>
 						<FileConfiguration
 							Name="Release_SSE2|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
 							>
 							<Tool
 								Name="VCCLCompilerTool"
@@ -1279,6 +1427,16 @@
 								BrowseInformation="1"
 							/>
 						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\src\freeflow\f_lcm_simple_tcl.cpp"
@@ -1327,6 +1485,16 @@
 						</FileConfiguration>
 						<FileConfiguration
 							Name="Release_SSE2|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
 							>
 							<Tool
 								Name="VCCLCompilerTool"
@@ -1468,6 +1636,16 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release_SSE2|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="freeflow_swig.bat&#x0D;&#x0A;"
+						AdditionalDependencies="../src/freeflow/interface/lcm.i;"
+						Outputs="../src/freeflow/freeflow_wrap.cxx"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_SSE|Win32"
 					>
 					<Tool
 						Name="VCCustomBuildTool"
