--- a/surfit/vc8/globe.vcproj
+++ b/surfit/vc8/globe.vcproj
@@ -416,8 +416,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release_SSE2|Win32"
-			OutputDirectory="$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="..\$(ConfigurationName)"
+			IntermediateDirectory="..\$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
@@ -461,12 +461,12 @@
 				EnableEnhancedInstructionSet="2"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\../Release/globe.pch"
-				AssemblerListingLocation=".\../Release/"
-				ObjectFile=".\../Release/"
-				ProgramDataBaseFileName=".\../Release/"
+				PrecompiledHeaderFile=".\../Release_SSE2/globe.pch"
+				AssemblerListingLocation=".\../Release_SSE2/"
+				ObjectFile=".\../Release_SSE2/"
+				ProgramDataBaseFileName=".\../Release_SSE2/"
 				BrowseInformation="1"
-				BrowseInformationFile=".\../Release/"
+				BrowseInformationFile=".\../Release_SSE2/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -520,7 +520,13 @@
 		</Configuration>
 		<Configuration
 			Name="Release_SSE|Win32"
-			ConfigurationType="1"
+			OutputDirectory="..\$(ConfigurationName)"
+			IntermediateDirectory="..\$(ConfigurationName)"
+			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -536,6 +542,12 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\../Release/globe.tlb"
+				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -544,21 +556,46 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				EnableFiberSafeOptimizations="false"
 				WholeProgramOptimization="true"
+				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,C:\Tcl\include\"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
+				StringPooling="true"
+				RuntimeLibrary="0"
+				EnableFunctionLevelLinking="true"
 				EnableEnhancedInstructionSet="1"
+				RuntimeTypeInfo="true"
+				UsePrecompiledHeader="0"
+				PrecompiledHeaderFile=".\../Release_SSE/globe.pch"
+				AssemblerListingLocation=".\../Release_SSE/"
+				ObjectFile=".\../Release_SSE/"
+				ProgramDataBaseFileName=".\../Release_SSE/"
+				BrowseInformation="1"
+				BrowseInformationFile=".\../Release_SSE/"
+				WarningLevel="3"
+				SuppressStartupBanner="true"
+				CompileAs="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
+				Culture="1049"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="tcl83.lib zdll.lib"
+				OutputFile="../bin/libglobe.dll"
+				LinkIncremental="1"
+				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="C:\Tcl\lib,..\..\libs\zlib123-dll\lib\"
+				ProgramDatabaseFile=".\../Release/libglobe.pdb"
+				ImportLibrary="../bin/libglobe.lib"
+				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -648,6 +685,16 @@
 						BrowseInformation="1"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_SSE|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="2"
+						AdditionalIncludeDirectories=""
+						BrowseInformation="1"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\src\globe\globe_data_manager.cpp"
@@ -668,7 +715,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						Optimization="2"
+						Optimization="3"
 						AdditionalIncludeDirectories=""
 						BrowseInformation="1"
 					/>
@@ -699,7 +746,17 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						Optimization="2"
+						Optimization="3"
+						AdditionalIncludeDirectories=""
+						BrowseInformation="1"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_SSE|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="3"
 						AdditionalIncludeDirectories=""
 						BrowseInformation="1"
 					/>
@@ -760,6 +817,16 @@
 						BrowseInformation="1"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_SSE|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="2"
+						AdditionalIncludeDirectories=""
+						BrowseInformation="1"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\src\globe\globe_wrap.cxx"
@@ -808,6 +875,16 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release_SSE2|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="3"
+						AdditionalIncludeDirectories=""
+						BrowseInformation="1"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_SSE|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -864,6 +941,16 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release_SSE2|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="2"
+						AdditionalIncludeDirectories=""
+						BrowseInformation="1"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_SSE|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -934,6 +1021,16 @@
 								BrowseInformation="1"
 							/>
 						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\src\globe\dem_internal.cpp"
@@ -990,6 +1087,16 @@
 								BrowseInformation="1"
 							/>
 						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\src\globe\dem_tcl.cpp"
@@ -1038,6 +1145,16 @@
 						</FileConfiguration>
 						<FileConfiguration
 							Name="Release_SSE2|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
 							>
 							<Tool
 								Name="VCCLCompilerTool"
@@ -1106,6 +1223,16 @@
 								BrowseInformation="1"
 							/>
 						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\src\globe\globe_surf_tcl.cpp"
@@ -1154,6 +1281,16 @@
 						</FileConfiguration>
 						<FileConfiguration
 							Name="Release_SSE2|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								Optimization="2"
+								AdditionalIncludeDirectories=""
+								BrowseInformation="1"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release_SSE|Win32"
 							>
 							<Tool
 								Name="VCCLCompilerTool"
@@ -1223,6 +1360,16 @@
 							BrowseInformation="1"
 						/>
 					</FileConfiguration>
+					<FileConfiguration
+						Name="Release_SSE|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							Optimization="2"
+							AdditionalIncludeDirectories=""
+							BrowseInformation="1"
+						/>
+					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\src\globe\f_dem.cpp"
@@ -1271,6 +1418,16 @@
 					</FileConfiguration>
 					<FileConfiguration
 						Name="Release_SSE2|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							Optimization="2"
+							AdditionalIncludeDirectories=""
+							BrowseInformation="1"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release_SSE|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -1339,6 +1496,16 @@
 							BrowseInformation="1"
 						/>
 					</FileConfiguration>
+					<FileConfiguration
+						Name="Release_SSE|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							Optimization="2"
+							AdditionalIncludeDirectories=""
+							BrowseInformation="1"
+						/>
+					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\src\globe\minizip\unzip.c"
@@ -1387,6 +1554,16 @@
 					</FileConfiguration>
 					<FileConfiguration
 						Name="Release_SSE2|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							Optimization="2"
+							AdditionalIncludeDirectories=""
+							BrowseInformation="1"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release_SSE|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -1527,6 +1704,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release_SSE2|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="globe_swig.bat&#x0D;&#x0A;"
+						Outputs="../src/globe/globe_wrap.cxx"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_SSE|Win32"
 					>
 					<Tool
 						Name="VCCustomBuildTool"
